{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 576,
  "lineage": "3ee1e892-935d-5cb6-7fe1-597f67a3402e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main-Bastion-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00e16b1e8a85b02e9",
            "arn": "arn:aws:ec2:us-east-1:794038252715:elastic-ip/eipalloc-00e16b1e8a85b02e9",
            "association_id": "eipassoc-0dc80c2e40ffbfe0d",
            "domain": "vpc",
            "id": "eipalloc-00e16b1e8a85b02e9",
            "instance": "i-02f398316b26eae5b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d99125a3b53a5b1f",
            "private_dns": "ip-10-0-1-44.ec2.internal",
            "private_ip": "10.0.1.44",
            "public_dns": "ec2-44-211-2-231.compute-1.amazonaws.com",
            "public_ip": "44.211.2.231",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.main-Bastion-host",
            "aws_security_group.main-bastion-SG",
            "aws_subnet.main-publicsubnet-A",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main-Nginx-A-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01705c46b2be82cb7",
            "arn": "arn:aws:ec2:us-east-1:794038252715:elastic-ip/eipalloc-01705c46b2be82cb7",
            "association_id": "eipassoc-00592e84007076dfa",
            "domain": "vpc",
            "id": "eipalloc-01705c46b2be82cb7",
            "instance": "i-0f191b716bf16574b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-00484daf319297816",
            "private_dns": "ip-10-0-1-10.ec2.internal",
            "private_ip": "10.0.1.10",
            "public_dns": "ec2-107-22-33-63.compute-1.amazonaws.com",
            "public_ip": "107.22.33.63",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_eip.main-Bastion-EIP",
            "aws_instance.main-Bastion-host",
            "aws_instance.main-Nginx-A",
            "aws_security_group.main-Nginx-A-SG",
            "aws_security_group.main-bastion-SG",
            "aws_subnet.main-publicsubnet-A",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main-Nginx-B-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06bf42d64b66bd3b6",
            "arn": "arn:aws:ec2:us-east-1:794038252715:elastic-ip/eipalloc-06bf42d64b66bd3b6",
            "association_id": "eipassoc-0b57f49d4eb71f22f",
            "domain": "vpc",
            "id": "eipalloc-06bf42d64b66bd3b6",
            "instance": "i-04f7da261f2c621e3",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09d06ad81806bf22b",
            "private_dns": "ip-10-0-2-28.ec2.internal",
            "private_ip": "10.0.2.28",
            "public_dns": "ec2-3-219-78-220.compute-1.amazonaws.com",
            "public_ip": "3.219.78.220",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_eip.main-Bastion-EIP",
            "aws_instance.main-Bastion-host",
            "aws_instance.main-Nginx-B",
            "aws_security_group.main-Nginx-B-SG",
            "aws_security_group.main-bastion-SG",
            "aws_subnet.main-publicsubnet-A",
            "aws_subnet.main-publicsubnet-B",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main-nat-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-004b262f13b71aecb",
            "arn": "arn:aws:ec2:us-east-1:794038252715:elastic-ip/eipalloc-004b262f13b71aecb",
            "association_id": "eipassoc-0a334965e07d58068",
            "domain": "vpc",
            "id": "eipalloc-004b262f13b71aecb",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08f57dde919484302",
            "private_dns": "ip-10-0-1-225.ec2.internal",
            "private_ip": "10.0.1.225",
            "public_dns": "ec2-52-71-105-141.compute-1.amazonaws.com",
            "public_ip": "52.71.105.141",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main-Bastion-host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc5d935ebf8bc3bc",
            "arn": "arn:aws:ec2:us-east-1:794038252715:instance/i-02f398316b26eae5b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02f398316b26eae5b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "ansible-test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d99125a3b53a5b1f",
            "private_dns": "ip-10-0-1-44.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.44",
            "public_dns": "ec2-44-212-52-74.compute-1.amazonaws.com",
            "public_ip": "44.212.52.74",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0688d7024d9654573",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-00ec83e2c63f7cb32"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08fb660b7ea9bf981",
            "tags": {
              "Name": "main-Bastion-host"
            },
            "tags_all": {
              "Name": "main-Bastion-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00ec83e2c63f7cb32"
            ]
          },
          "dependencies": [
            "aws_security_group.main-bastion-SG",
            "aws_subnet.main-publicsubnet-A",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main-Mongo-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc5d935ebf8bc3bc",
            "arn": "arn:aws:ec2:us-east-1:794038252715:instance/i-087f95fd97db45c29",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-087f95fd97db45c29",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "ansible-test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-061df267e03b9eccc",
            "private_dns": "ip-10-0-5-194.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.5.194",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-063f3019919e750b1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-06fa9930e013aef1f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00dd02f45cf66d5cc",
            "tags": {
              "Name": "main-Mongo-A-host"
            },
            "tags_all": {
              "Name": "main-Mongo-A-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06fa9930e013aef1f"
            ]
          },
          "dependencies": [
            "aws_eip.main-Bastion-EIP",
            "aws_instance.main-Bastion-host",
            "aws_security_group.main-Back-LB-SG",
            "aws_security_group.main-Mongo-SG",
            "aws_security_group.main-Nginx-A-SG",
            "aws_security_group.main-Nginx-B-SG",
            "aws_security_group.main-Nodejs-SG",
            "aws_security_group.main-bastion-SG",
            "aws_subnet.main-privatesubnet-C",
            "aws_subnet.main-publicsubnet-A",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main-Mongo-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc5d935ebf8bc3bc",
            "arn": "arn:aws:ec2:us-east-1:794038252715:instance/i-024b141a6bc668709",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-024b141a6bc668709",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "ansible-test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06185239f2332fd1e",
            "private_dns": "ip-10-0-6-80.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.6.80",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d7d468b57577ddb9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-06fa9930e013aef1f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d1e7949f13f27f84",
            "tags": {
              "Name": "main-Mongo-B-host"
            },
            "tags_all": {
              "Name": "main-Mongo-B-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06fa9930e013aef1f"
            ]
          },
          "dependencies": [
            "aws_eip.main-Bastion-EIP",
            "aws_instance.main-Bastion-host",
            "aws_security_group.main-Back-LB-SG",
            "aws_security_group.main-Mongo-SG",
            "aws_security_group.main-Nginx-A-SG",
            "aws_security_group.main-Nginx-B-SG",
            "aws_security_group.main-Nodejs-SG",
            "aws_security_group.main-bastion-SG",
            "aws_subnet.main-privatesubnet-D",
            "aws_subnet.main-publicsubnet-A",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main-Nginx-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc5d935ebf8bc3bc",
            "arn": "arn:aws:ec2:us-east-1:794038252715:instance/i-0f191b716bf16574b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f191b716bf16574b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "ansible-test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00484daf319297816",
            "private_dns": "ip-10-0-1-10.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.10",
            "public_dns": "ec2-75-101-171-185.compute-1.amazonaws.com",
            "public_ip": "75.101.171.185",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-009f63bd16faa263a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-01f5a8c592111e52b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08fb660b7ea9bf981",
            "tags": {
              "Name": "main-Nginx-A-host"
            },
            "tags_all": {
              "Name": "main-Nginx-A-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01f5a8c592111e52b"
            ]
          },
          "dependencies": [
            "aws_eip.main-Bastion-EIP",
            "aws_instance.main-Bastion-host",
            "aws_security_group.main-Nginx-A-SG",
            "aws_security_group.main-bastion-SG",
            "aws_subnet.main-publicsubnet-A",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main-Nginx-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc5d935ebf8bc3bc",
            "arn": "arn:aws:ec2:us-east-1:794038252715:instance/i-04f7da261f2c621e3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04f7da261f2c621e3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "ansible-test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09d06ad81806bf22b",
            "private_dns": "ip-10-0-2-28.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.28",
            "public_dns": "ec2-3-87-47-231.compute-1.amazonaws.com",
            "public_ip": "3.87.47.231",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01346273d54837d03",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-03dc17d6a7e2140d6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b7555546312f45fb",
            "tags": {
              "Name": "main-Nginx-B-host"
            },
            "tags_all": {
              "Name": "main-Nginx-B-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03dc17d6a7e2140d6"
            ]
          },
          "dependencies": [
            "aws_eip.main-Bastion-EIP",
            "aws_instance.main-Bastion-host",
            "aws_security_group.main-Nginx-B-SG",
            "aws_security_group.main-bastion-SG",
            "aws_subnet.main-publicsubnet-A",
            "aws_subnet.main-publicsubnet-B",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main-Nodejs-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc5d935ebf8bc3bc",
            "arn": "arn:aws:ec2:us-east-1:794038252715:instance/i-08eb47a25791f7be1",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08eb47a25791f7be1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "ansible-test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-048beea6a77e718c4",
            "private_dns": "ip-10-0-3-69.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.69",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05df786a45a5c6749",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-00ac06627ccca8aba"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0028d5e434a44b2a0",
            "tags": {
              "Name": "main-Nodejs-A-host"
            },
            "tags_all": {
              "Name": "main-Nodejs-A-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00ac06627ccca8aba"
            ]
          },
          "dependencies": [
            "aws_eip.main-Bastion-EIP",
            "aws_instance.main-Bastion-host",
            "aws_security_group.main-Back-LB-SG",
            "aws_security_group.main-Nginx-A-SG",
            "aws_security_group.main-Nginx-B-SG",
            "aws_security_group.main-Nodejs-SG",
            "aws_security_group.main-bastion-SG",
            "aws_subnet.main-privatesubnet-A",
            "aws_subnet.main-publicsubnet-A",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main-Nodejs-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc5d935ebf8bc3bc",
            "arn": "arn:aws:ec2:us-east-1:794038252715:instance/i-0d41594752ae9bfe8",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d41594752ae9bfe8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "ansible-test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01f2db176f897f0f1",
            "private_dns": "ip-10-0-4-241.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.241",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02551dabef654bfc8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-00ac06627ccca8aba"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dbbefa8ec1531148",
            "tags": {
              "Name": "main-Nodejs-B-host"
            },
            "tags_all": {
              "Name": "main-Nodejs-B-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00ac06627ccca8aba"
            ]
          },
          "dependencies": [
            "aws_eip.main-Bastion-EIP",
            "aws_instance.main-Bastion-host",
            "aws_security_group.main-Back-LB-SG",
            "aws_security_group.main-Nginx-A-SG",
            "aws_security_group.main-Nginx-B-SG",
            "aws_security_group.main-Nodejs-SG",
            "aws_security_group.main-bastion-SG",
            "aws_subnet.main-privatesubnet-B",
            "aws_subnet.main-publicsubnet-A",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038252715:internet-gateway/igw-00939c13c15c01f6e",
            "id": "igw-00939c13c15c01f6e",
            "owner_id": "794038252715",
            "tags": {
              "Name": "MainIGW"
            },
            "tags_all": {
              "Name": "MainIGW"
            },
            "vpc_id": "vpc-0c28d35e8af47ef0c"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main-Back-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:794038252715:loadbalancer/app/main-private-lb/6747b0c1402a43df",
            "arn_suffix": "app/main-private-lb/6747b0c1402a43df",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-main-private-lb-1977316107.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:794038252715:loadbalancer/app/main-private-lb/6747b0c1402a43df",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "main-private-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-040283c2a45256de0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0028d5e434a44b2a0"
              },
              {
                "subnet_id": "subnet-0dbbefa8ec1531148"
              }
            ],
            "subnets": [
              "subnet-0028d5e434a44b2a0",
              "subnet-0dbbefa8ec1531148"
            ],
            "tags": {
              "Name": "main-Back-LB-"
            },
            "tags_all": {
              "Name": "main-Back-LB-"
            },
            "vpc_id": "vpc-0c28d35e8af47ef0c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_eip.main-Bastion-EIP",
            "aws_instance.main-Bastion-host",
            "aws_security_group.main-Back-LB-SG",
            "aws_security_group.main-Nginx-A-SG",
            "aws_security_group.main-Nginx-B-SG",
            "aws_security_group.main-bastion-SG",
            "aws_subnet.main-privatesubnet-A",
            "aws_subnet.main-privatesubnet-B",
            "aws_subnet.main-publicsubnet-A",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main-front-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:794038252715:loadbalancer/app/main-public-lb/0e13934aac7c73cb",
            "arn_suffix": "app/main-public-lb/0e13934aac7c73cb",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "main-public-lb-1766095710.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:794038252715:loadbalancer/app/main-public-lb/0e13934aac7c73cb",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "main-public-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-097555bd8eacb472b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08fb660b7ea9bf981"
              },
              {
                "subnet_id": "subnet-0b7555546312f45fb"
              }
            ],
            "subnets": [
              "subnet-08fb660b7ea9bf981",
              "subnet-0b7555546312f45fb"
            ],
            "tags": {
              "Name": "main-Front-LB-"
            },
            "tags_all": {
              "Name": "main-Front-LB-"
            },
            "vpc_id": "vpc-0c28d35e8af47ef0c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_eip.main-Bastion-EIP",
            "aws_instance.main-Bastion-host",
            "aws_security_group.main-Front-LB-SG",
            "aws_security_group.main-Nginx-A-SG",
            "aws_security_group.main-Nginx-B-SG",
            "aws_security_group.main-bastion-SG",
            "aws_subnet.main-publicsubnet-A",
            "aws_subnet.main-publicsubnet-B",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "Nginx-Front-list",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:794038252715:listener/app/main-public-lb/0e13934aac7c73cb/8f5225e13241ae3a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:794038252715:targetgroup/Nginx-Front-TG/b47e731e38f3b095",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:794038252715:listener/app/main-public-lb/0e13934aac7c73cb/8f5225e13241ae3a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:794038252715:loadbalancer/app/main-public-lb/0e13934aac7c73cb",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.main-Bastion-EIP",
            "aws_instance.main-Bastion-host",
            "aws_lb.main-front-lb",
            "aws_lb_target_group.Nginx-Front-TG",
            "aws_security_group.main-Front-LB-SG",
            "aws_security_group.main-Nginx-A-SG",
            "aws_security_group.main-Nginx-B-SG",
            "aws_security_group.main-bastion-SG",
            "aws_subnet.main-publicsubnet-A",
            "aws_subnet.main-publicsubnet-B",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "Nodejs-Back-list",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:794038252715:listener/app/main-private-lb/6747b0c1402a43df/db338aaee8984f27",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:794038252715:targetgroup/Nodejs-Back-TG/d5b897bb4dd087fc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:794038252715:listener/app/main-private-lb/6747b0c1402a43df/db338aaee8984f27",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:794038252715:loadbalancer/app/main-private-lb/6747b0c1402a43df",
            "mutual_authentication": [],
            "port": 3000,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.main-Bastion-EIP",
            "aws_instance.main-Bastion-host",
            "aws_lb.main-Back-lb",
            "aws_lb_target_group.Nodejs-Back-TG",
            "aws_lb_target_group.Nodejs-Back-TG-3000",
            "aws_lb_target_group.Nodejs-Back-TG-4000",
            "aws_security_group.main-Back-LB-SG",
            "aws_security_group.main-Nginx-A-SG",
            "aws_security_group.main-Nginx-B-SG",
            "aws_security_group.main-bastion-SG",
            "aws_subnet.main-privatesubnet-A",
            "aws_subnet.main-privatesubnet-B",
            "aws_subnet.main-publicsubnet-A",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "Nodejs-Back-list-4000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:794038252715:listener/app/main-private-lb/6747b0c1402a43df/0f15b2e40624a129",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:794038252715:targetgroup/Nodejs-Back-TG-4000/00851fbaea5e02fa",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:794038252715:listener/app/main-private-lb/6747b0c1402a43df/0f15b2e40624a129",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:794038252715:loadbalancer/app/main-private-lb/6747b0c1402a43df",
            "mutual_authentication": [],
            "port": 4000,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.main-Bastion-EIP",
            "aws_instance.main-Bastion-host",
            "aws_lb.main-Back-lb",
            "aws_lb_target_group.Nodejs-Back-TG-4000",
            "aws_security_group.main-Back-LB-SG",
            "aws_security_group.main-Nginx-A-SG",
            "aws_security_group.main-Nginx-B-SG",
            "aws_security_group.main-bastion-SG",
            "aws_subnet.main-privatesubnet-A",
            "aws_subnet.main-privatesubnet-B",
            "aws_subnet.main-publicsubnet-A",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "Nginx-Front-TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:794038252715:targetgroup/Nginx-Front-TG/b47e731e38f3b095",
            "arn_suffix": "targetgroup/Nginx-Front-TG/b47e731e38f3b095",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:794038252715:targetgroup/Nginx-Front-TG/b47e731e38f3b095",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:794038252715:loadbalancer/app/main-public-lb/0e13934aac7c73cb"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Nginx-Front-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c28d35e8af47ef0c"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "Nodejs-Back-TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:794038252715:targetgroup/Nodejs-Back-TG/d5b897bb4dd087fc",
            "arn_suffix": "targetgroup/Nodejs-Back-TG/d5b897bb4dd087fc",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:794038252715:targetgroup/Nodejs-Back-TG/d5b897bb4dd087fc",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:794038252715:loadbalancer/app/main-private-lb/6747b0c1402a43df"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Nodejs-Back-TG",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c28d35e8af47ef0c"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "Nodejs-Back-TG-3000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:794038252715:targetgroup/Nodejs-Back-TG-3000/e2dfe9c7bdd41fb3",
            "arn_suffix": "targetgroup/Nodejs-Back-TG-3000/e2dfe9c7bdd41fb3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:794038252715:targetgroup/Nodejs-Back-TG-3000/e2dfe9c7bdd41fb3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Nodejs-Back-TG-3000",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c28d35e8af47ef0c"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "Nodejs-Back-TG-4000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:794038252715:targetgroup/Nodejs-Back-TG-4000/00851fbaea5e02fa",
            "arn_suffix": "targetgroup/Nodejs-Back-TG-4000/00851fbaea5e02fa",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:794038252715:targetgroup/Nodejs-Back-TG-4000/00851fbaea5e02fa",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:794038252715:loadbalancer/app/main-private-lb/6747b0c1402a43df"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Nodejs-Back-TG-4000",
            "port": 4000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c28d35e8af47ef0c"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "Nginx-Front-lb-A-attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:794038252715:targetgroup/Nginx-Front-TG/b47e731e38f3b095-20250213130421001300000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:794038252715:targetgroup/Nginx-Front-TG/b47e731e38f3b095",
            "target_id": "i-0f191b716bf16574b"
          },
          "dependencies": [
            "aws_eip.main-Bastion-EIP",
            "aws_instance.main-Bastion-host",
            "aws_instance.main-Nginx-A",
            "aws_lb_target_group.Nginx-Front-TG",
            "aws_security_group.main-Nginx-A-SG",
            "aws_security_group.main-bastion-SG",
            "aws_subnet.main-publicsubnet-A",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "Nginx-Front-lb-B-attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:794038252715:targetgroup/Nginx-Front-TG/b47e731e38f3b095-20250213130421293800000009",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:794038252715:targetgroup/Nginx-Front-TG/b47e731e38f3b095",
            "target_id": "i-04f7da261f2c621e3"
          },
          "dependencies": [
            "aws_eip.main-Bastion-EIP",
            "aws_instance.main-Bastion-host",
            "aws_instance.main-Nginx-B",
            "aws_lb_target_group.Nginx-Front-TG",
            "aws_security_group.main-Nginx-B-SG",
            "aws_security_group.main-bastion-SG",
            "aws_subnet.main-publicsubnet-A",
            "aws_subnet.main-publicsubnet-B",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "NodeJs-Back-lb-A-attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:794038252715:targetgroup/Nodejs-Back-TG-3000/e2dfe9c7bdd41fb3-2025021313042265830000000a",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:794038252715:targetgroup/Nodejs-Back-TG-3000/e2dfe9c7bdd41fb3",
            "target_id": "i-08eb47a25791f7be1"
          },
          "dependencies": [
            "aws_eip.main-Bastion-EIP",
            "aws_instance.main-Bastion-host",
            "aws_instance.main-Nodejs-A",
            "aws_lb_target_group.Nodejs-Back-TG-3000",
            "aws_security_group.main-Back-LB-SG",
            "aws_security_group.main-Nginx-A-SG",
            "aws_security_group.main-Nginx-B-SG",
            "aws_security_group.main-Nodejs-SG",
            "aws_security_group.main-bastion-SG",
            "aws_subnet.main-privatesubnet-A",
            "aws_subnet.main-publicsubnet-A",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "NodeJs-Back-lb-B-attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:794038252715:targetgroup/Nodejs-Back-TG-4000/00851fbaea5e02fa-2025021313042273940000000b",
            "port": 4000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:794038252715:targetgroup/Nodejs-Back-TG-4000/00851fbaea5e02fa",
            "target_id": "i-0d41594752ae9bfe8"
          },
          "dependencies": [
            "aws_eip.main-Bastion-EIP",
            "aws_instance.main-Bastion-host",
            "aws_instance.main-Nodejs-B",
            "aws_lb_target_group.Nodejs-Back-TG-4000",
            "aws_security_group.main-Back-LB-SG",
            "aws_security_group.main-Nginx-A-SG",
            "aws_security_group.main-Nginx-B-SG",
            "aws_security_group.main-Nodejs-SG",
            "aws_security_group.main-bastion-SG",
            "aws_subnet.main-privatesubnet-B",
            "aws_subnet.main-publicsubnet-A",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main-NatGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-004b262f13b71aecb",
            "association_id": "eipassoc-0a334965e07d58068",
            "connectivity_type": "public",
            "id": "nat-09ff2ddb3589b2f0d",
            "network_interface_id": "eni-08f57dde919484302",
            "private_ip": "10.0.1.225",
            "public_ip": "52.71.105.141",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08fb660b7ea9bf981",
            "tags": {
              "Name": "Main-NatGW"
            },
            "tags_all": {
              "Name": "Main-NatGW"
            }
          },
          "dependencies": [
            "aws_eip.main-nat-EIP",
            "aws_subnet.main-publicsubnet-A",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-Private-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038252715:route-table/rtb-0653ebb751e41e850",
            "id": "rtb-0653ebb751e41e850",
            "owner_id": "794038252715",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09ff2ddb3589b2f0d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-Private-RT"
            },
            "tags_all": {
              "Name": "main-Private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c28d35e8af47ef0c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.main-nat-EIP",
            "aws_nat_gateway.main-NatGW",
            "aws_subnet.main-publicsubnet-A",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-Public-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038252715:route-table/rtb-05857a732534589c1",
            "id": "rtb-05857a732534589c1",
            "owner_id": "794038252715",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00939c13c15c01f6e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-Public-RT"
            },
            "tags_all": {
              "Name": "main-Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c28d35e8af47ef0c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main-IGW",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-private-A-RT-Assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c68f7ef92fec0e6",
            "route_table_id": "rtb-0653ebb751e41e850",
            "subnet_id": "subnet-0028d5e434a44b2a0"
          },
          "dependencies": [
            "aws_eip.main-nat-EIP",
            "aws_nat_gateway.main-NatGW",
            "aws_route_table.main-Private-RT",
            "aws_subnet.main-privatesubnet-A",
            "aws_subnet.main-publicsubnet-A",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-private-B-RT-Assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04eb81fc2c8cd7f1e",
            "route_table_id": "rtb-0653ebb751e41e850",
            "subnet_id": "subnet-0dbbefa8ec1531148"
          },
          "dependencies": [
            "aws_eip.main-nat-EIP",
            "aws_nat_gateway.main-NatGW",
            "aws_route_table.main-Private-RT",
            "aws_subnet.main-privatesubnet-B",
            "aws_subnet.main-publicsubnet-A",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-private-C-RT-Assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0471e02bcb5cf89d6",
            "route_table_id": "rtb-0653ebb751e41e850",
            "subnet_id": "subnet-00dd02f45cf66d5cc"
          },
          "dependencies": [
            "aws_eip.main-nat-EIP",
            "aws_nat_gateway.main-NatGW",
            "aws_route_table.main-Private-RT",
            "aws_subnet.main-privatesubnet-C",
            "aws_subnet.main-publicsubnet-A",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-private-D-RT-Assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad055eb3e7d04a02",
            "route_table_id": "rtb-0653ebb751e41e850",
            "subnet_id": "subnet-0d1e7949f13f27f84"
          },
          "dependencies": [
            "aws_eip.main-nat-EIP",
            "aws_nat_gateway.main-NatGW",
            "aws_route_table.main-Private-RT",
            "aws_subnet.main-privatesubnet-D",
            "aws_subnet.main-publicsubnet-A",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-A-RT-Assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094b314d71aad71d2",
            "route_table_id": "rtb-05857a732534589c1",
            "subnet_id": "subnet-08fb660b7ea9bf981"
          },
          "dependencies": [
            "aws_internet_gateway.main-IGW",
            "aws_route_table.main-Public-RT",
            "aws_subnet.main-publicsubnet-A",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-B-RT-Assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b515d9370a8a744d",
            "route_table_id": "rtb-05857a732534589c1",
            "subnet_id": "subnet-0b7555546312f45fb"
          },
          "dependencies": [
            "aws_internet_gateway.main-IGW",
            "aws_route_table.main-Public-RT",
            "aws_subnet.main-publicsubnet-B",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main-Back-LB-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038252715:security-group/sg-040283c2a45256de0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-040283c2a45256de0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01f5a8c592111e52b",
                  "sg-03dc17d6a7e2140d6"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 4000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01f5a8c592111e52b",
                  "sg-03dc17d6a7e2140d6"
                ],
                "self": false,
                "to_port": 4000
              }
            ],
            "name": "terraform-20250212122146994400000005",
            "name_prefix": "terraform-",
            "owner_id": "794038252715",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "main-Backend-LB-SG"
            },
            "tags_all": {
              "Name": "main-Backend-LB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c28d35e8af47ef0c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.main-Bastion-EIP",
            "aws_instance.main-Bastion-host",
            "aws_security_group.main-Nginx-A-SG",
            "aws_security_group.main-Nginx-B-SG",
            "aws_security_group.main-bastion-SG",
            "aws_subnet.main-publicsubnet-A",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main-Front-LB-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038252715:security-group/sg-097555bd8eacb472b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01f5a8c592111e52b",
                  "sg-03dc17d6a7e2140d6"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-097555bd8eacb472b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250212122147000800000006",
            "name_prefix": "terraform-",
            "owner_id": "794038252715",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "main-front-LB-SG"
            },
            "tags_all": {
              "Name": "main-front-LB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c28d35e8af47ef0c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.main-Bastion-EIP",
            "aws_instance.main-Bastion-host",
            "aws_security_group.main-Nginx-A-SG",
            "aws_security_group.main-Nginx-B-SG",
            "aws_security_group.main-bastion-SG",
            "aws_subnet.main-publicsubnet-A",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main-Mongo-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038252715:security-group/sg-06fa9930e013aef1f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06fa9930e013aef1f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.44/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00ac06627ccca8aba"
                ],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "terraform-20250212131614650600000003",
            "name_prefix": "terraform-",
            "owner_id": "794038252715",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "main-Mongo-SG"
            },
            "tags_all": {
              "Name": "main-Mongo-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c28d35e8af47ef0c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.main-Bastion-EIP",
            "aws_instance.main-Bastion-host",
            "aws_security_group.main-Back-LB-SG",
            "aws_security_group.main-Nginx-A-SG",
            "aws_security_group.main-Nginx-B-SG",
            "aws_security_group.main-Nodejs-SG",
            "aws_security_group.main-bastion-SG",
            "aws_subnet.main-publicsubnet-A",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main-Nginx-A-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038252715:security-group/sg-01f5a8c592111e52b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01f5a8c592111e52b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "44.211.2.231/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20250212122143444600000003",
            "name_prefix": "terraform-",
            "owner_id": "794038252715",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "main-Nginx-A-SG"
            },
            "tags_all": {
              "Name": "main-Nginx-A-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c28d35e8af47ef0c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.main-Bastion-EIP",
            "aws_instance.main-Bastion-host",
            "aws_security_group.main-bastion-SG",
            "aws_subnet.main-publicsubnet-A",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main-Nginx-B-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038252715:security-group/sg-03dc17d6a7e2140d6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03dc17d6a7e2140d6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "44.211.2.231/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20250212122143483800000004",
            "name_prefix": "terraform-",
            "owner_id": "794038252715",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "main-Nginx-B-SG"
            },
            "tags_all": {
              "Name": "main-Nginx-B-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c28d35e8af47ef0c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.main-Bastion-EIP",
            "aws_instance.main-Bastion-host",
            "aws_security_group.main-bastion-SG",
            "aws_subnet.main-publicsubnet-A",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main-Nodejs-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038252715:security-group/sg-00ac06627ccca8aba",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00ac06627ccca8aba",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.44/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-040283c2a45256de0"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "terraform-20250212131610953900000001",
            "name_prefix": "terraform-",
            "owner_id": "794038252715",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "main-Nodejs-SG"
            },
            "tags_all": {
              "Name": "main-Nodejs-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c28d35e8af47ef0c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.main-Bastion-EIP",
            "aws_instance.main-Bastion-host",
            "aws_security_group.main-Back-LB-SG",
            "aws_security_group.main-Nginx-A-SG",
            "aws_security_group.main-Nginx-B-SG",
            "aws_security_group.main-bastion-SG",
            "aws_subnet.main-publicsubnet-A",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main-bastion-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038252715:security-group/sg-00ec83e2c63f7cb32",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00ec83e2c63f7cb32",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20250212122137747700000001",
            "name_prefix": "terraform-",
            "owner_id": "794038252715",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "main-Bastion-host-SG"
            },
            "tags_all": {
              "Name": "main-Bastion-host-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c28d35e8af47ef0c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-privatesubnet-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038252715:subnet/subnet-0028d5e434a44b2a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0028d5e434a44b2a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "794038252715",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-privatesubnet-A"
            },
            "tags_all": {
              "Name": "main-privatesubnet-A"
            },
            "vpc_id": "vpc-0c28d35e8af47ef0c"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-privatesubnet-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038252715:subnet/subnet-0dbbefa8ec1531148",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dbbefa8ec1531148",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "794038252715",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-privatesubnet-B"
            },
            "tags_all": {
              "Name": "main-privatesubnet-B"
            },
            "vpc_id": "vpc-0c28d35e8af47ef0c"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-privatesubnet-C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038252715:subnet/subnet-00dd02f45cf66d5cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00dd02f45cf66d5cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "794038252715",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-privatesubnet-C"
            },
            "tags_all": {
              "Name": "main-privatesubnet-C"
            },
            "vpc_id": "vpc-0c28d35e8af47ef0c"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-privatesubnet-D",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038252715:subnet/subnet-0d1e7949f13f27f84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1e7949f13f27f84",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "794038252715",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-privatesubnet-D"
            },
            "tags_all": {
              "Name": "main-privatesubnet-D"
            },
            "vpc_id": "vpc-0c28d35e8af47ef0c"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-publicsubnet-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038252715:subnet/subnet-08fb660b7ea9bf981",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08fb660b7ea9bf981",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "794038252715",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-publicsubnet-A"
            },
            "tags_all": {
              "Name": "main-publicsubnet-A"
            },
            "vpc_id": "vpc-0c28d35e8af47ef0c"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-publicsubnet-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038252715:subnet/subnet-0b7555546312f45fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7555546312f45fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "794038252715",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-publicsubnet-B"
            },
            "tags_all": {
              "Name": "main-publicsubnet-B"
            },
            "vpc_id": "vpc-0c28d35e8af47ef0c"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mainvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038252715:vpc/vpc-0c28d35e8af47ef0c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ae112fb45f2ef86d",
            "default_route_table_id": "rtb-0d6bf333f768b020d",
            "default_security_group_id": "sg-0b14f0f8d1d9d8ebc",
            "dhcp_options_id": "dopt-02f0eec59d461c1d5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c28d35e8af47ef0c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d6bf333f768b020d",
            "owner_id": "794038252715",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}